--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk:
   - oraclejdk8
 # Caching for Gradle files, prevents hitting Maven too much.
 before_cache:
+  - find . -name '*.lock' -print -exec 'rm -f {} \;'
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
@@ -16,3 +17,8 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
+# Code Coverage!
+before_install:
+  - pip install codecov
+after_success:
+  - codecov
