Add code coverage in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'application'
@@ -116,3 +117,11 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+check.dependsOn jacocoTestReport
