--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ configurations.all {
      // force certain versions of dependencies (including transitive)
      force 'com.google.auto.service:auto-service:1.0-SNAPSHOT', 'com.google.guava:guava:18.0',
            'com.google.dagger:dagger:2.0', 'com.google.auto:auto-common:0.4',
+           'com.google.auto.value:auto-value:1.2-SNAPSHOT',
            'org.apache.httpcomponents:httpcore:4.3.3', 'org.apache.httpcomponents:httpclient:4.3.6',
            'commons-codec:commons-codec:1.7'
 
@@ -114,6 +115,7 @@ dependencies {
     // compile group: 'com.firebase', name: 'firebase-client-jvm', version: '2.5.+'
     // Sorta just for here.
     // compile group: 'com.firebase', name: 'firebase-token-generator', version: '2.0.+'
+    compile group: 'com.google.inject', name: 'guice', version: '3.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
     compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
     // LOL AJE
